<?xml version="1.0"?>
<package format="3">
  <name>gps_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for GPS data in ROS2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Required build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies required for message generation -->
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Runtime dependencies for message use in Python and C++ -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

